# neo-reviewer

./: .gitignore  .luarc.json  .luarc.lint.json  AGENTS.md  LICENSE  Makefile  README.md  flake.nix
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: comment.rs  diff.rs  fetch.rs  mod.rs  reply.rs  submit.rs
cli/src/diff/: parser.rs  types.rs
cli/src/github/: auth.rs  client.rs  types.rs
cli/tests/: integration.rs
doc/: greviewer.txt  neo_reviewer.txt
lua/greviewer/: cli.lua  config.lua  init.lua  state.lua
lua/greviewer/ui/: buffer.lua  comments.lua  comments_file.lua  nav.lua  signs.lua  virtual.lua
lua/neo_reviewer/: ai.lua  cli.lua  config.lua  init.lua  plugin.lua  state.lua  walkthrough.lua
lua/neo_reviewer/ui/: ai.lua  buffer.lua  comments.lua  comments_file.lua  nav.lua  signs.lua  virtual.lua  walkthrough.lua
lua/stubs/: luassert.lua
lua/tests/: minimal_init.lua
lua/tests/fixtures/: mock_pr_data.lua
lua/tests/plenary/: ai_spec.lua  cli_spec.lua  config_spec.lua  copy_comments_spec.lua  copy_review_feedback_spec.lua  helpers.lua  init_ai_spec.lua  init_review_diff_spec.lua  init_walkthrough_controls_spec.lua  review_submit_spec.lua  setup_commands_spec.lua  state_spec.lua  sync_spec.lua  walkthrough_spec.lua
plugin/: neo_reviewer.lua  neo_reviewer.vim
repo/: main.tf  terraform.tfstate
tests/: minimal_init.lua
tests/fixtures/: mock_pr_data.lua
tests/plenary/: ai_spec.lua  cli_spec.lua  config_spec.lua  review_open_spec.lua  state_spec.lua  sync_spec.lua
tests/plenary/ui/: buffer_spec.lua  (+4 more)
(+8 files in other folders)
