[package]
name = "neo-reviewer"
version = "0.1.0"
edition = "2024"
description = "CLI tool for reviewing GitHub pull requests in Neovim"
license = "MIT"
repository = "https://github.com/dglsparsons/neo-reviewer"
readme = "../README.md"
keywords = ["neovim", "github", "pull-request", "code-review"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "neo-reviewer"
path = "src/main.rs"

[dependencies]
# GitHub API client
octocrab = "0.49"

# TLS crypto backend (required by rustls 0.23+)
rustls = { version = "0.23", features = ["ring"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# URL/regex parsing
regex = "1.11"
url = "2.5"

# HTTP client for raw API requests
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "http2"] }
